src/objects/GenericSobjectCreator__c.object
<CustomObject>
    <fields>
        <fullName>FieldCreatorJson__c</fullName>
        <label>FieldCreatorJson</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>GenericSobjectCreator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GenericSobjectCreator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GenericSobjectCreators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>